# oris

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.ru.md  dental_scene_graph.py  docker-compose.yml  grammar.md  pyproject.toml  references.bib
anatomy/: airway.md  furcation.md  landmarks.md  ontology.md  pai.md  tmj.md  vertucci.md
bridges/: RADLEX_MAPPING.md  README.md  __init__.py  dicom_sr.py  fhir.py  mis.py  mmoral.py
docs/: architecture.md  figure2.html  getting-started.md  getting-started.ru.md  glossary.md  index.html  version-roadmap.md
examples/: README.md  synthetic_001.json  synthetic_002.json  synthetic_003_pediatric.json  synthetic_opg_010_demographics.json  synthetic_opg_011_demographics.json  synthetic_opg_012_demographics.json  synthetic_opg_013_demographics.json  synthetic_opg_020_caries.json  synthetic_opg_021_endo.json  synthetic_opg_022_implants.json  synthetic_opg_023_full_arch.json  synthetic_opg_024_periapical.json  synthetic_opg_025_mixed.json  synthetic_opg_026_attrition.json  synthetic_opg_027_orthodontic.json  synthetic_opg_028_root_remnants.json  synthetic_opg_029_bridge.json  synthetic_opg_030_low_quality.json  synthetic_opg_031_empty.json  synthetic_opg_040_single_16.json  synthetic_opg_041_single_16.json  synthetic_opg_042_single_17.json  synthetic_opg_043_single_25.json  synthetic_opg_044_single_36.json  synthetic_opg_045_single_38.json  synthetic_opg_046_single_16.json  synthetic_opg_047_single_15.json  synthetic_opg_048_single_46.json
grammar/: README.md  complications.md  ebnf.txt  statuses.md  surfaces.md
numbering/: occupants.md  permanent-teeth.csv  primary-teeth.csv
parser/: README.md  __init__.py  core.py  kappa.py  numbering.py  validate.py
production-arena/: README.md  mock_app.py  requirements.txt
reference-app/: DESIGN_NOTES.md  README.md  mock_app.py  requirements.txt
schema/: README.md  oris-v0.1.json
tests/: test_bridges.py  test_examples_validate.py  test_full_coverage.py  test_kappa.py  test_numbering.py  test_parser_core.py  test_validate.py
tools/: build_pages.py  generate_examples.py
web-demo/: README.md  index.html  oris.js  styles.css
(+75 files in other folders)
